Added image to readme

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Arduino based hardware talking to a midi-sequencer written in node.js 
 
-software uses node, socket.io, node-midi, node-microtime, processing
+software uses node, socket.io, node-midi, node-microtime
+
+![Prototype](https://raw.github.com/possan/nodesequencer/master/prototype.jpg)
